--- a/resources/sass/back/_variables.scss
+++ b/resources/sass/back/_variables.scss
@@ -2,6 +2,10 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: 'Roboto', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+
+
+$roboto: 'Roboto', sans-serif;
+//100, 300, 400, 500, 700
