--- a/resources/sass/back/app.scss
+++ b/resources/sass/back/app.scss
@@ -2,7 +2,7 @@
 @import 'variables';
 
 // Bootstrap
-// @import 'bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 @import './components.scss';
@@ -50,6 +50,12 @@ body {
 .container {
     width: 95%;
     padding: 40px 0;
+    margin-left: calc((100% - 95%) / 2);
+}
+
+.container-alerts {
+    width: 95%;
+    padding: 5px;
     margin-left: calc((100% - 95%) / 2);
 }
 
